# shuttlings-cch24

./: Cargo.toml  Shuttle.toml  build.rs
.sqlx/: query-59ff82c4587b8b28aab6c5205e8422a6ef2492f6ce4c64b11cfc2decdf416f08.json  query-7d1e84222370ce0fadcec57b2939763ccb99747b817c8c84af2d1a19533220a4.json  query-ce55bfef4eb0ce3f0138225c2401560ddd7f7deac7cea896d3efd97da61ac892.json
migrations/: 20241219185013_quotes.sql
src/: day_02.rs  day_05.rs  day_09.rs  day_12.rs  day_16.rs  day_19.rs  day_2.rs  day_23.rs  day_5.rs  lib.rs  main.rs
src/models/: board.rs
